almost done without refactor

--- a/frontend/src/components/Quotes/Quotes.css
+++ b/frontend/src/components/Quotes/Quotes.css
@@ -6,3 +6,9 @@
     box-shadow: 1px 1px 1px 1px rgb(211, 211, 211);
     background-color: rgb(225, 225, 225);
 }
+
+.quote-button{
+    margin-top: -.5rem;
+}
+
+
