--- a/frontend/src/components/Navbar/NavBar.css
+++ b/frontend/src/components/Navbar/NavBar.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     width: auto;
-    background-color: rgb(151, 151, 151);
+    background-color:rgb(247, 225, 213);
     font-size: 2rem;
     text-decoration: none;
     margin-bottom: 3rem;
@@ -10,7 +10,9 @@
 
 .link {
     text-decoration: none;
-    color: black;
+    color: rgb(71, 70, 70);
+    font-size: 1.5rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .nav-item {
@@ -22,6 +24,5 @@
 }
 
 .nav-item:hover {
-    color: white;
-    background-color: rgb(179, 178, 178)
+    background-color:rgb(252, 231, 219);
 }
