--- a/frontend/src/components/SearchBar/SearchBar.css
+++ b/frontend/src/components/SearchBar/SearchBar.css
@@ -1,16 +1,53 @@
-.search-bar{
-    margin: 1rem
-};
+.search-bar {
+    margin-top: 2rem;
+    display: sticky;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .search-input {
+    width: 10rem;
+    outline: none;
+    border: none;
+    background-color: white;
+    border-radius: 10px 0px 0px 10px;
+    padding: 0.5rem;
+    height: 2rem;
+    font-size: large;
+    border-right: none;
+    margin-right: none;
+    font-size: larger;
+    font-family:Verdana, Geneva, Tahoma, sans-serif
+  }
+  
+  .search-button {
+    background-color: white;
+    height: 3rem;
+    width: 5rem;
+    border: none;
+    border-radius: 0px 10px 10px 0px;
+    margin: 10px;
+    margin-left: 0;
+    font-size: large;
+  }
 
-.search-button {
-    width: 20rem;
-    height: 5rem;
-    background-color: black;
+
+  @media screen and (min-width: 700px) {
+    .search-input {
+        width: 15rem;
+    }
 }
 
-.search-input{
-    width: 20rem;
-    height: 2rem;
-    border-radius: .5rem;
-    font-size: larger;
+
+@media screen and (min-width: 900px) {
+    .search-input {
+        width: 20rem;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .search-input {
+        width: 30rem;
+    }
 }
