--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -2,3 +2,7 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(71, 70, 70);
 }
+.image{
+    width: 30vh;
+    height: auto;
+}
